tests/api/snapshots/api__parse__failures__failures_bad_source_files-data-# sent_id = 2_1.snap
---
source: tests/api/parse.rs
expression: res
---
Err(
    DeError(
        MissingField(
            "form",
        ),
    ),
)
