tests/api/snapshots/api__parse__failures__failures_bad_source_files-data-# sent_id = 3_k.snap
---
source: tests/api/parse.rs
expression: res
---
Err(
    DeError(
        InvalidValue(
            "id",
            "Failed to parse as id: Unsupported id form: 'k'",
        ),
    ),
)
